version 1.10:
	* Complexity calculation now works with Java 5 language
	  features such as Annotations. (Tri Bao Ho)
	* Support Ant <dirset>s. (Matt Cordes, John Lewis)
	* Support the antlib mechanism for defining and importing 
	  ant tasks. (Richard Atkins)
	* Report generation will look in zip and jar files if the 
	  source java file is not found. (Charlie Squires, John Lewis)  

version 1.9:
	* Much improved branch coverage.  Information on whether
	  the true as well as the false of an if statement is
	  collected.  Also, information on the branches of a
	  switch statement (including the default) is collected.
	  (Jiri Mares)
	* Assume Java source files are saved as UTF-8 instead of
	  the computer's default encoding.
	* Write all HTML and XML reports in UTF-8 instead of the
	  computer's default encoding (Naoki Iwami).
	* Fix a bug where the Cobertura ant tasks would not work
	  correctly in Microsoft Windows when Cobertura was
	  installed on a different drive than the drive from which
	  you're running ant (Srivathsan Varadarajan).
	* Added a "maxmemory" attribute to the instrument, merge
	  and report ant tasks (Matt Cordes).
	* Improve support for Maven and similar environments where
	  control over system properties is difficult such as
	  app servers, IoC containers, IDEs, etc.  Setting the
	  datafile location is difficult in these environments.
	  To correct this, a cobertura.properties file 
	  located in the classpath is used to properly set the 
	  net.sourceforge.cobertura.datafile property.  
	  (Joakim Erdfelt)

version 1.8 (2006-04-10)
	* Ability to have multiple <ignore/> regular expressions
	  in the instrument task (Alexei Yudichev).
	* Ability to specify a minimum branch coverage rate and
	  line coverage rate for each package when using
	  cobertura-check.
	* Show the number of lines and branches covered and the
	  total number of lines and branches in the HTML report.
	* Support for instrumenting classes written in Groovy.